<resources>
    <string name="app_name">JobSpark</string>
    <string name="back_button">Back Button</string>
    <string name="lamaran_anda">Lamaran Anda</string>
    <string name="company_logo">Company Logo</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="dicoding_bandung">Dicoding | Bandung</string>
    <string name="detail_pekerjaan">Detail Pekerjaan</string>
    <string name="desainer_senior_full_time_3_tahun_pengalaman">• Desainer Senior\n• Full time\n• 3 Tahun pengalaman</string>
    <string name="detail_lamaran">Detail Lamaran</string>
    <string name="cv_resume">• CV/Resume</string>
    <string name="pdf_icon">PDF Icon</string>
    <string name="brandon_cv_ui_ux_designer_pdf">Brandon - CV - UI/UX Designer.PDF</string>
    <string name="_867_kb_14_feb_2024_at_11_30_am">867 Kb • 14 Feb 2024 at 11:30 am</string>
    <string name="edit_pengalaman">Edit Pengalaman</string>
    <string name="judul_pekerjaan">Judul Pekerjaan</string>
    <string name="perusahaan">Perusahaan</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="jan_2015">Jan 2015</string>
    <string name="tanggal_berakhir">Tanggal Berakhir</string>
    <string name="feb_2025">Feb 2025</string>
    <string name="saya_masih_bekerja_di_sini">Saya masih bekerja di sini</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tambahkan_deskripsi_singkat">Tambahkan deskripsi singkat</string>
    <string name="hapus">HAPUS</string>
    <string name="simpan">SIMPAN</string>
    <string name="tambahkan_pengalaman">Tambahkan Pengalaman</string>
    <string name="mm_yyyy">MM/YYYY</string>
    <string name="perbarui_password">Perbarui Password</string>
    <string name="password_lama">Password lama</string>
    <string name="show_password">Show Password</string>
    <string name="password_baru">Password baru</string>
    <string name="password_baru_sekali_lagi">Password baru sekali lagi</string>
    <string name="perbarui">PERBARUI</string>
    <string name="back">Back</string>
    <string name="dicoding"> Dicoding </string>
    <string name="bandung"> Bandung </string>
    <string name="_1_hari_lalu"> 1 hari lalu </string>
    <string name="brandon_cv_ui_ux_designer">Brandon - CV - UI/UX Designer</string>
    <string name="berhasil">Berhasil</string>
    <string name="selamat_lamaran_anda_berhasil_terkirim">Selamat, lamaran anda berhasil terkirim!</string>
    <string name="kembali_ke_beranda">KEMBALI KE BERANDA</string>
    <string name="no_saved_jobs_illustration">No Saved Jobs Illustration</string>
    <string name="tidak_ada_yang_disimpan">Tidak ada yang disimpan</string>
    <string name="temukan_lowongan">TEMUKAN LOWONGAN</string>
    <string name="arsitek">Arsitek</string>
    <string name="no_results_illustration">No Results Illustration</string>
    <string name="tidak_ada_hasil_ditemukan">Tidak ada hasil ditemukan</string>
    <string name="job_title">Job Title</string>
    <string name="company_name_location">Company Name • Location</string>
    <string name="salary">Salary</string>
    <string name="job_image">Job Image</string>
    <string name="_15_juta_bulan">15 Juta/Bulan</string>
    <string name="full_time">Full time</string>
    <string name="ajukan">Ajukan</string>
    <string name="save_job">Save Job</string>
    <string name="delete">Delete</string>
    <string name="desainer_senior">Desainer Senior</string>
    <string name="job_icon">Job Icon</string>
    <string name="lamaran_anda_telah_terkirim">Lamaran anda telah terkirim.</string>
    <string name="detail">Detail</string>
    <string name="deskripsi_pekerjaan">Deskripsi Pekerjaan</string>
    <string name="job_description_will_be_displayed_here">Job Description will be displayed here.</string>
    <string name="kualifikasi">Kualifikasi</string>
    <string name="qualification_details_here">Qualification details here.</string>
    <string name="pengalaman_minimal">Pengalaman Minimal</string>
    <string name="_1_2_tahun">1–2 tahun</string>
    <string name="tipe_pekerjaan">Tipe Pekerjaan</string>
    <string name="_4_000_000_5_000_000">4.000.000 – 5.000.000</string>
    <string name="upload_cv">Upload CV</string>
    <string name="unggah_dokumen_cv_anda">Unggah dokumen CV Anda</string>
    <string name="company_name">Company Name</string>
    <string name="upload_cv_resume">Upload CV/Resume</string>
    <string name="no_file_selected">No file selected</string>
    <string name="temukan">Temukan</string>
    <string name="pekerjaan_impianmu">Pekerjaan Impianmu</string>
    <string name="disini">Disini!</string>
    <string name="because_everyone_can_shine">Because everyone can shine!</string>
    <string name="hobi_dan_minat">Hobi dan Minat</string>
    <string name="kemampuan_khusus">Kemampuan Khusus</string>
    <string name="kondisi_kesehatan">Kondisi Kesehatan</string>
    <string name="daftar">DAFTAR</string>
    <string name="next">NEXT</string>
    <string name="coba_lagi">COBA LAGI</string>
    <string name="mohon_tunggu_sebentar">Mohon Tunggu Sebentar</string>
    <string name="sedang_melakukan_verifikasi_dan_pengecekan">Sedang Melakukan Verifikasi dan Pengecekan</string>
    <string name="arahkan_wajah_anda_ke_kamera">Arahkan Wajah Anda ke Kamera</string>
    <string name="lengkapi_profil">Lengkapi Profil</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="birth_date">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="alamat_tempat_tinggal">Alamat Tempat Tinggal</string>
    <string name="nomor_darurat">Nomor Darurat</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="pengingat">Pengingat</string>
    <string name="mode_gelap">Mode Gelap</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="desain">Desain</string>
    <string name="brandon">Brandon</string>
    <string name="yogyakarta_id">Yogyakarta, ID</string>
    <string name="tentang_saya">Tentang Saya</string>
    <string name="saya_adalah_seorang_profesional_yang_bersemangat_dengan_pengalaman_di_industri_teknologi_dan_manajemen">Saya adalah seorang profesional yang bersemangat dengan pengalaman di industri teknologi dan manajemen.</string>
    <string name="pengalaman_kerja">Pengalaman Kerja</string>
    <string name="manager">Manager</string>
    <string name="amazon_id">Amazon ID</string>
    <string name="jan_2015_feb_2022_5_tahun">Jan 2015 - Feb 2022 · 5 Tahun</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ingat_aku">Ingat Aku</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="keluar">Keluar</string>
    <string name="konfirmasi_logout">Anda yakin ingin keluar?</string>
    <string name="ya">YA</string>
    <string name="batal">BATAL</string>
    <string name="simpan_lowongan">Simpan Lowongan</string>
    <string name="hello_username">Hello Username</string>
    <string name="banner_desc">Setiap Talenta Berharga: Temukan Kesempatan Kerja yang Sesuai!</string>
    <string name="recommended_job">Pekerjaan Spesial Untukmu</string>
    <string name="riwayat">Riwayat</string>
    <string name="hello_guest">Hello Guest</string>
    <string name="setiap_talenta_berharga_temukan_kesempatan_kerja_yang_sesuai">Setiap Talenta Berharga: Temukan Kesempatan Kerja yang Sesuai!</string>
    <string name="lowongan_tersedia">Lowongan Tersedia</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="date_applied">Date Applied</string>
    <string name="end_date_icon">End datce Icon</string>
    <string name="button_back">Button back</string>
    <string name="success">Success</string>
    <string name="logo">Logo</string>
    <string name="hello">Hello, %1$s</string>
    <string name="ambil_ulang">Ambil Ulang</string>
    <string name="capture_image">Ambil Gambar</string>
    <string name="take_ulang">Take Ulang</string>
    <string name="upper_background">Upper Background</string>
    <string name="search_jobs">Search Jobs</string>
    <string name="icon">icon</string>
    <string name="desc">Maaf, Anda tidak terdeteksi Down Syndrome</string>
</resources>