<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/job_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/job_image"
            android:padding="16dp"
            android:src="@drawable/logo_dicoding" />

        <TextView
            android:id="@+id/job_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/dm_sans_reguler"
            android:text="@string/ui_ux_designer"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_reguler"
                android:text="@string/dicoding"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_reguler"
                android:text=" | "
                android:textColor="#000000"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/job_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_reguler"
                android:text="@string/bandung"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_reguler"
                android:text=" | "
                android:textColor="#000000"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_reguler"
                android:text="@string/_1_hari_lalu"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/job_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/deskripsi_pekerjaan"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/job_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_reguler"
            android:text="@string/job_description_will_be_displayed_here"
            android:textColor="#444444"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/job_qualification_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/kualifikasi"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/job_qualification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_reguler"
            android:text="@string/qualification_details_here"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/min_experience_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/pengalaman_minimal"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/min_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_reguler"
            android:text="@string/_1_2_tahun"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/job_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/tipe_pekerjaan"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/job_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_reguler"
            android:text="@string/full_time"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/job_salary_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/salary"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/job_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_000_000_5_000_000"
            android:textColor="#000000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/apply_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:backgroundTint="#1E88E5"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/ajukan"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>
