<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#F5F5F5">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/button_back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_pengalaman"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#1F1F39"
        android:fontFamily="@font/dm_sans_bold"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/jobTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul_pekerjaan"
        android:textSize="14sp"
        android:textColor="#1F1F39"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/jobTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:hint="@string/judul_pekerjaan"
        android:inputType="textShortMessage"
        android:padding="16dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobTitleLabel" />

    <TextView
        android:id="@+id/companyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perusahaan"
        android:textSize="14sp"
        android:textColor="#1F1F39"
        app:layout_constraintTop_toBottomOf="@id/jobTitleEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/companyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:hint="@string/perusahaan"
        android:inputType="textShortMessage"
        android:padding="16dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/companyLabel" />

    <TextView
        android:id="@+id/startDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_mulai"
        android:textSize="14sp"
        android:textColor="#1F1F39"
        app:layout_constraintTop_toBottomOf="@id/companyEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/startDateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/jan_2015"
        android:background="@drawable/rounded_edittext"
        android:inputType="date"
        android:padding="16dp"
        android:textColorHint="#888888"
        app:layout_constraintTop_toBottomOf="@id/startDateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endDateEditText"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/startDateIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/tanggal_mulai"
        android:src="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="@id/startDateEditText"
        app:layout_constraintTop_toTopOf="@id/startDateEditText"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/endDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_berakhir"
        android:textSize="14sp"
        android:textColor="#1F1F39"
        app:layout_constraintTop_toTopOf="@id/startDateLabel"
        app:layout_constraintStart_toEndOf="@id/startDateEditText"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/endDateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/feb_2025"
        android:background="@drawable/rounded_edittext"
        android:inputType="date"
        android:padding="16dp"
        android:textColorHint="#888888"
        app:layout_constraintTop_toBottomOf="@id/endDateLabel"
        app:layout_constraintStart_toEndOf="@id/startDateEditText"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/endDateIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/end_date_icon"
        android:src="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="@id/endDateEditText"
        app:layout_constraintTop_toTopOf="@id/endDateEditText"
        android:layout_margin="8dp" />

    <CheckBox
        android:id="@+id/currentlyWorkingCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saya_masih_bekerja_di_sini"
        app:layout_constraintTop_toBottomOf="@id/endDateEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi"
        android:textSize="14sp"
        android:textColor="#1F1F39"
        app:layout_constraintTop_toBottomOf="@id/currentlyWorkingCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:gravity="top"
        android:hint="@string/tambahkan_deskripsi_singkat"
        android:inputType="textLongMessage"
        android:padding="16dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionLabel" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#B0BEC5"
        android:text="@string/hapus"
        android:textColor="#0D47A1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:textColor="#FFFFFF"
        android:backgroundTint="#1F76D3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/deleteButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
